WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
179845
[Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer.
https://bugs.webkit.org/show_bug.cgi?id=179845
Summary
[Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer.
Per Arne Vollan
Reported
2017-11-17 15:16:53 PST
boxHeaderSize is not a member of WebCore::ISOBox.
Attachments
Patch
(1.49 KB, patch)
2017-11-17 15:20 PST
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2017-11-17 15:17:28 PST
<
rdar://problem/35611906
>
Per Arne Vollan
Comment 2
2017-11-17 15:20:30 PST
Created
attachment 327252
[details]
Patch
Per Arne Vollan
Comment 3
2017-11-17 16:29:06 PST
Comment on
attachment 327252
[details]
Patch Thanks for reviewing!
WebKit Commit Bot
Comment 4
2017-11-17 16:48:59 PST
Comment on
attachment 327252
[details]
Patch Clearing flags on attachment: 327252 Committed
r225000
: <
https://trac.webkit.org/changeset/225000
>
WebKit Commit Bot
Comment 5
2017-11-17 16:49:00 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug