[Win] Compile error in InbandTextTrackPrivateAVCF::readNativeSampleBuffer. https://bugs.webkit.org/show_bug.cgi?id=179845

Reviewed by Jer Noble.

* platform/graphics/avfoundation/cf/InbandTextTrackPrivateAVCF.cpp:
(WebCore::InbandTextTrackPrivateAVCF::readNativeSampleBuffer):


Canonical link: https://commits.webkit.org/195869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225000 268f45cc-cd09-0410-ab3c-d52691b4dbfc